--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -12,3 +12,10 @@ port = <?php echo @$db['port'].PHP_EOL; ?>
 session_save_handler = dbtables
 assume_secure_protocol = 1
 proxy_client_headers[] = HTTP_X_FORWARDED_FOR
+force_ssl = 1
+<?php if (getenv('MATOMO_SALT')) { ?>
+salt = "<?php echo getenv('MATOMO_SALT') ?>"
+<?php } ?>
+<?php if (getenv('MATOMO_GENERAL_TRUSTED_HOSTS')) { ?>
+trusted_hosts[] = <?php echo getenv('MATOMO_GENERAL_TRUSTED_HOSTS') ?>
+<?php } ?>
