--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -13,6 +13,7 @@ session_save_handler = dbtables
 assume_secure_protocol = 1
 proxy_client_headers[] = HTTP_X_FORWARDED_FOR
 force_ssl = 1
+always_load_commands_from_plugin=DbCommands,AdminCommands,LicenseKeyCommands
 <?php if (getenv('MATOMO_SALT')) { ?>
 salt = "<?php echo getenv('MATOMO_SALT') ?>"
 <?php } ?>
