--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -21,5 +21,5 @@ salt = "<?php echo getenv('MATOMO_SALT') ?>"
 trusted_hosts[] = <?php echo getenv('MATOMO_HOST') ?>
 <?php } ?>
 <?php if (getenv('MATOMO_MULTI_SERVER_ENVIRONMENT')) { ?>
-multi_server_environment = "<?php echo getenv('MATOMO_MULTI_SERVER_ENVIRONMENT') ?>"
+multi_server_environment = <?php echo getenv('MATOMO_MULTI_SERVER_ENVIRONMENT') ?>
 <?php } ?>
